@@ -50,11 +50,11 @@ $string['display'] = 'Visa mappinnehåll';
 $string['display_help'] = "Om du väljer att visa mappinnehållet på kurssidan så kommer det inte finnas någon länk till en separat sida. Beskrivningen visas enbart om \"Visa beskrivning på kurssidan\" är ikryssad.\n\nNotera också att deltagarnas visningar inte kan loggas i det här fallet.";
 $string['displaypage'] = 'På en separat sida';
 $string['displayinline'] = 'På kurssidan';
-$string['directlinktext'] = 'direktlänk';
+$string['downloadlinktext'] = 'ladda ned';
 $string['noautocompletioninline'] = 'Automatiskt slutförande vid visning av aktivitet kan inte väljas tillsammans med alternativet "Visa på kurssidan"';
 $string['showexpanded'] = 'Visa undermappar expanderade';
 $string['showexpanded_help'] = 'Om aktiverat så visas undermappar expanderade som standard. Om inte visas undermappar ihopfällda.';
 $string['openinnewtab'] = 'Öppna PDF:er i nya tabbar/fönster';
 $string['openinnewtab_help'] = 'Om aktiverat så kommer PDF:er öppnas i nya tabbar eller fönster istället för i nuvarande tabb eller fönster.';
-$string['showdirectlinks'] = 'Visa alternativa direktlänkar';
-$string['showdirectlinks_help'] = "Om aktiverat så kommer varje PDF.js-baserad länk följas av en direktlänk till PDF:en.\n\nDet här kan vara användbart för mobila enheter där PDF.js kanske använder för mycket minne eller är för långsamt för att fungera tillfredsställande.";
+$string['showdownloadlinks'] = 'Visa nedladdningslänkar';
+$string['showdownloadlinks_help'] = "Om aktiverat så kommer varje PDF.js-baserad länk följas av en länk för att ladda ned PDF:en.\n\nDet här kan vara användbart för mobila enheter där PDF.js kan använda för mycket minne eller vara för långsamt för att fungera tillfredsställande.";
