@@ -1,4 +1,6 @@
-HEAD  -
+HEAD  -  Changed direct links to links with forced download flag
+         set to make the choice one with known outcomes; either
+         view a PDF in the browser or download it.
 
 0.13  -  Added option for additional direct PDF links primarily for
          mobiles/tablets that PDF.js might not always work for due
